cmake_minimum_required(VERSION 3.0.0)
project(ragemp-cppsdk VERSION 0.3.7)

set(RAGEMP_CPPSDK_TARGET_NAME rage)
set(RAGEMP_CPPSDK_INCLUDE_BUILD_DIR ${PROJECT_SOURCE_DIR})

add_library(${RAGEMP_CPPSDK_TARGET_NAME} INTERFACE)
add_library(${PROJECT_NAME}::${RAGEMP_CPPSDK_TARGET_NAME} ALIAS ${RAGEMP_CPPSDK_TARGET_NAME})
target_compile_features(${RAGEMP_CPPSDK_TARGET_NAME} INTERFACE cxx_std_17)

target_include_directories(
	${RAGEMP_CPPSDK_TARGET_NAME}
	INTERFACE
	$<BUILD_INTERFACE:${RAGEMP_CPPSDK_INCLUDE_BUILD_DIR}>
)
